// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct summary for 1 expense 1`] = `
<div>
  <h1>
    Viewing [object Object] 
            expenses totalling
            $1.95
  </h1>
</div>
`;

exports[`should render correct summary for many expenses 1`] = `
<div>
  <h1>
    Viewing [object Object],[object Object],[object Object] 
            expenses totalling
            $1,141.95
  </h1>
</div>
`;
